--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -8,7 +8,7 @@ border-1px($color = #ccc, $radius = 2PX, $style = solid)
     left: 0
     top: 0
     transform-origin: 0 0
-    border: 1PX $style $color
+    border-bottom: 1PX $style $color
     border-radius: $radius
     box-sizing border-box
     width 100%
